# C2Py

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: actions.yml
c2py/: interface.py
c2py/c2pa/: assertion.py  assertion_store.py  claim.py  claim_signature.py  manifest.py  manifest_store.py
c2py/c2pa_injection/: jpeg_injection.py
c2py/jumbf_boxes/: box.py  content_box.py  description_box.py  jumbf_content_types.py  super_box.py
c2py/utils/: assertion_schemas.py  content_types.py
c2py_test_app/: test_app.py
scripts/: run_unit_tests.sh
tests/: c2pa_injections_test.py  c2pa_integration_test.py  dummy_test.py  manifest_test.py
tests/c2pa/: assertion_store_test.py  assertion_test.py  claim_signature_test.py  claim_test.py  manifest_store_test.py  manifest_test.py
tests/jumbf/: boxes_test.py  content_boxes_test.py  description_boxes_test.py  super_boxes_test.py
