[tool.poetry]
name = "c2py"
version = "0.1.0"
description = "The C2Py is python library which provide C2PA standard functionality."
authors = ["Starodubtcev Dmitriy"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
